--- a/styles.css
+++ b/styles.css
@@ -637,7 +637,7 @@ footer a:hover{
     .fir-word{
         font-weight: 200;
          color:#fff;
-         /* font-size: 10px; */
+         font-size: 14px;
          margin-bottom: 10px;
     }
     .sec-word{
@@ -656,10 +656,10 @@ footer a:hover{
         /* font-weight: bold; */
         /* color:; */
         text-decoration: none;
-        padding: 4px 10px;
+        padding: 4px 6px;
         border-radius: 8px;
         transition: 0.3s;
-        font-size:12px;
+        font-size:11px;
     }
     .section-3 > div{
         display:grid;
@@ -672,8 +672,14 @@ footer a:hover{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
     }
-    .fa-solid{
-        font-size:25px;
+    .section-4 .head{
+        font-size:14px;
+    }
+    .section-4 p{
+        font-size:10px;
+    }
+    .section-4 .fa-solid{
+        font-size:20px;
         color:#341E62;
     }
     .section-5 > div{
@@ -782,7 +788,7 @@ footer a:hover{
     .fir-word{
         font-weight: 200;
          color:#fff;
-         /* font-size: 10px; */
+         font-size: 14px;
          margin-bottom: 10px;
     }
     .sec-word{
@@ -797,14 +803,11 @@ footer a:hover{
         margin-bottom: 10px;
     }
     .browse{
-        /* background: #fff; */
-        /* font-weight: bold; */
-        /* color:; */
         text-decoration: none;
-        padding: 4px 10px;
+        padding: 4px 6px;
         border-radius: 8px;
         transition: 0.3s;
-        font-size:12px;
+        font-size:11px;
     }
     .section-3 > div{
         display:grid;
@@ -817,10 +820,16 @@ footer a:hover{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     }
-    .fa-solid{
-        font-size:25px;
-        color:#341E62;
+    .section-4 .head{
+        font-size:14px;
     }
+    .section-4 p{
+        font-size:10px;
+    }
+    .section-4 .fa-solid{
+        font-size:20px;
+        color:#341E62;
+    } 
     .section-5 > div{
         grid-template-columns: 1fr;
         grid-template-areas: "fine-smile"
@@ -910,7 +919,7 @@ footer a:hover{
     .fir-word{
         font-weight: 200;
          color:#fff;
-         /* font-size: 10px; */
+         font-size: 14px;
          margin-bottom: 10px;
     }
     .sec-word{
@@ -927,12 +936,12 @@ footer a:hover{
     .browse{
         /* background: #fff; */
         /* font-weight: bold; */
-        /* color:#000; */
+        /* color:; */
         text-decoration: none;
-        padding: 4px 10px;
+        padding: 4px 6px;
         border-radius: 8px;
         transition: 0.3s;
-        font-size:12px;
+        font-size:11px;
     }
     .section-3 > div{
         display:grid;
@@ -945,6 +954,13 @@ footer a:hover{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
+    .section-4 .head{
+        font-size:14px;
+    }
+    .section-4 p{
+        font-size:12px;
+    }
+    
     .fa-solid{
         font-size:25px;
         color:#341E62;
@@ -1017,7 +1033,9 @@ footer a:hover{
         width:35px;
         height:35px;
     }
-     
+     footer .icons{
+        gap:1em;
+     }
 }
 @media screen and (min-width:441px) and (max-width:520px){
     .heading > h2{
@@ -1081,6 +1099,12 @@ footer a:hover{
     .section-4 > div{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+    .section-4 .head{
+        font-size:14px;
+    }
+    .section-4 p{
+        font-size:14px;
     }
     .fa-solid{
         font-size:25px;
